src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__implicit_param_downcast_in_function_call.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
warning: Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT
   ┌─ <internal>:12:17
   │
12 │                 var1_lint, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT

warning: Incompatible poiner types: passing by-ref argument of type LWORD to parameter expecting DWORD
   ┌─ <internal>:13:17
   │
13 │                 var_lword, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LWORD to parameter expecting DWORD

warning: Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT
   ┌─ <internal>:16:17
   │
16 │                 var2_lint, // downcast
   │                 ^^^^^^^^^ Incompatible poiner types: passing by-ref argument of type LINT to parameter expecting INT

error: Invalid assignment: cannot assign 'WSTRING' to 'STRING'
   ┌─ <internal>:17:17
   │
17 │                 var_in_out_wstr, // invalid
   │                 ^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'WSTRING' to 'STRING'
